--- a/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
@@ -9,11 +9,18 @@
 
 <VBox fx:id="card_border" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="161.0" prefWidth="104.0" spacing="5.0" stylesheets="@styles/CardGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CardOnHandController">
    <children>
-      <Label fx:id="card_name" alignment="CENTER" prefHeight="34.0" prefWidth="85.0" text="NAMA KARTU" wrapText="true">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Label>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <ImageView fx:id="card_icon" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@icon/character_icon.png" />
+            </ImageView>
+            <Label fx:id="card_name" alignment="CENTER" prefHeight="34.0" prefWidth="85.0" text="NAMA KARTU" wrapText="true">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
       <ImageView fx:id="card_img" fitHeight="73.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../card/image/character/Aang.png" />
