--- a/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
@@ -5,30 +5,34 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.avatarduel.guicontroller.Board.FieldController"
-      prefHeight="400.0" prefWidth="600.0">
-    <HBox >
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character1"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character2"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character3"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character4"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character5"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character6"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character7"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character8"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="character9"/>
-    </HBox>
-    <HBox >
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill1"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill2"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill3"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill4"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill5"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill6"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill7"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill8"/>
-        <fx:include source="../Card/CardOnPlay.fxml" fx:id="skill9"/>
-    </HBox>
+
+<VBox prefHeight="269.0" prefWidth="1363.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.FieldController">
+   <children>
+       <HBox spacing="50.0">
+          <children>
+              <fx:include fx:id="character1" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character2" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character3" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character4" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character5" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character6" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character7" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character8" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character9" source="../Card/CardOnPlay.fxml" />
+          </children>
+       </HBox>
+       <HBox spacing="50.0">
+          <children>
+              <fx:include fx:id="skill1" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill2" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill3" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill4" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill5" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill6" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill7" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill8" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill9" source="../Card/CardOnPlay.fxml" />
+          </children>
+       </HBox>
+   </children>
 </VBox>
