--- a/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CardOnHand.fxml
@@ -7,21 +7,23 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="card_border" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="161.0" prefWidth="104.0" spacing="5.0" stylesheets="@styles/CardGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CardOnHandController">
+<VBox fx:id="card_border" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="171.0" prefWidth="106.0" spacing="5.0" stylesheets="@styles/CardGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Card.CardOnHandController">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
             <ImageView fx:id="card_icon" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@icon/character_icon.png" />
+               <image>
+                  <Image url="@../../card/icon/character_icon.png" />
+               </image>
             </ImageView>
-            <Label fx:id="card_name" alignment="CENTER" prefHeight="34.0" prefWidth="85.0" text="NAMA KARTU" wrapText="true">
+            <Label fx:id="card_name" alignment="CENTER" prefHeight="110.0" prefWidth="77.0" text="NAMA KARTU" wrapText="true">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <ImageView fx:id="card_img" fitHeight="73.0" fitWidth="73.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="card_img" fitHeight="61.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../card/image/character/Aang.png" />
          </image>
