--- a/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
@@ -6,32 +6,35 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="269.0" prefWidth="1363.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.FieldController">
+<VBox prefHeight="269.0" prefWidth="1363.0"
+      xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.avatarduel.guicontroller.Board.FieldController"
+      fx:id="card_container">
    <children>
-       <HBox spacing="50.0">
+       <HBox spacing="50.0" fx:id="character_container">
           <children>
-              <fx:include fx:id="character1" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character2" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character3" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character4" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character5" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character6" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character7" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character8" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="character9" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="character1" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character2" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character3" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character4" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character5" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character6" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character7" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character8" source="../Card/CharacterCardOnPlay.fxml" />
+              <fx:include fx:id="character9" source="../Card/CharacterCardOnPlay.fxml" />
           </children>
        </HBox>
-       <HBox spacing="50.0">
+       <HBox spacing="50.0" fx:id="skill_container">
           <children>
-              <fx:include fx:id="skill1" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill2" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill3" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill4" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill5" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill6" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill7" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill8" source="../Card/CardOnPlay.fxml" />
-              <fx:include fx:id="skill9" source="../Card/CardOnPlay.fxml" />
+              <fx:include fx:id="skill1" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill2" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill3" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill4" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill5" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill6" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill7" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill8" source="../Card/SkillCardOnPlay.fxml" />
+              <fx:include fx:id="skill9" source="../Card/SkillCardOnPlay.fxml" />
           </children>
        </HBox>
    </children>
