--- a/src/main/resources/com/avatarduel/GUI/Card/CharacterCardOnPlay.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Card/CharacterCardOnPlay.fxml
@@ -18,7 +18,7 @@
                <image>
                   <Image url="@../../card/icon/CharacterOnFieldHoverAttack.png" />
                </image></ImageView>
-            <ImageView fx:id="card_rotate" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="card_rotate" fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#rotateCard">
                <image>
                   <Image url="@../../card/icon/CharacterOnFieldHoverRotate.png" />
                </image>
