--- a/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
+++ b/src/main/resources/com/avatarduel/GUI/Board/Field.fxml
@@ -6,37 +6,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="317.0" prefWidth="1339.0"
-           stylesheets="@styles/Field.css"
-           xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="com.avatarduel.guicontroller.Board.FieldController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="1021.0" stylesheets="@styles/Field.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.avatarduel.guicontroller.Board.FieldController">
    <children>
-      <VBox fx:id="card_container" prefHeight="269.0" prefWidth="1363.0">
+      <VBox fx:id="card_container" prefHeight="317.0" prefWidth="1064.0">
          <children>
             <HBox fx:id="character_container" spacing="50.0">
                <children>
-                  <fx:include fx:id="character1" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character2" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character3" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character4" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character5" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character6" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character7" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character8" source="../Card/CharacterCardOnPlay.fxml" />
-                  <fx:include fx:id="character9" source="../Card/CharacterCardOnPlay.fxml" />
+                  <fx:include fx:id="character1" source="../Card/CharacterCardInField.fxml" />
+                  <fx:include fx:id="character2" source="../Card/CharacterCardInField.fxml" />
+                  <fx:include fx:id="character3" source="../Card/CharacterCardInField.fxml" />
+                  <fx:include fx:id="character4" source="../Card/CharacterCardInField.fxml" />
+                  <fx:include fx:id="character5" source="../Card/CharacterCardInField.fxml" />
+                  <fx:include fx:id="character6" source="../Card/CharacterCardInField.fxml" />
                </children>
             </HBox>
             <HBox fx:id="skill_container" spacing="50.0">
                <children>
-                  <fx:include fx:id="skill1" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill2" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill3" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill4" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill5" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill6" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill7" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill8" source="../Card/SkillCardOnPlay.fxml" />
-                  <fx:include fx:id="skill9" source="../Card/SkillCardOnPlay.fxml" />
+                  <fx:include fx:id="skill1" source="../Card/SkillCardInField.fxml" />
+                  <fx:include fx:id="skill2" source="../Card/SkillCardInField.fxml" />
+                  <fx:include fx:id="skill3" source="../Card/SkillCardInField.fxml" />
+                  <fx:include fx:id="skill4" source="../Card/SkillCardInField.fxml" />
+                  <fx:include fx:id="skill5" source="../Card/SkillCardInField.fxml" />
+                  <fx:include fx:id="skill6" source="../Card/SkillCardInField.fxml" />
                </children>
             </HBox>
          </children>
